deploy: e188b17f93b3afed6fa2908e5ba900dc5f745592

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bfa925f2",
+   "id": "c7d47e53",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d7a296",
+   "id": "83048070",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24bb29c4",
+   "id": "d8e5954d",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6affd17f",
+   "id": "39cb02a5",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7080b8f",
+   "id": "b7537f6f",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f877d629",
+   "id": "d6c53c87",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e882fddf",
+   "id": "450fcdbf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:48.204282Z",
-     "iopub.status.busy": "2025-01-22T10:38:48.204109Z",
-     "iopub.status.idle": "2025-01-22T10:38:52.447986Z",
-     "shell.execute_reply": "2025-01-22T10:38:52.447374Z"
+     "iopub.execute_input": "2025-01-22T10:54:27.395929Z",
+     "iopub.status.busy": "2025-01-22T10:54:27.395757Z",
+     "iopub.status.idle": "2025-01-22T10:54:31.592226Z",
+     "shell.execute_reply": "2025-01-22T10:54:31.591696Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af68229",
+   "id": "fee8882a",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c00d0723",
+   "id": "6327fe28",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ada0e3",
+   "id": "24a4db1f",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b9b19c5",
+   "id": "31c85515",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d01a8d1",
+   "id": "82337ac6",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f36a2e26",
+   "id": "3dde2309",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6394d0e",
+   "id": "1a205363",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e37ae2",
+   "id": "d94bf7a6",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9f52e3a4",
+   "id": "912bc4be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:52.450204Z",
-     "iopub.status.busy": "2025-01-22T10:38:52.449760Z",
-     "iopub.status.idle": "2025-01-22T10:38:54.347862Z",
-     "shell.execute_reply": "2025-01-22T10:38:54.347306Z"
+     "iopub.execute_input": "2025-01-22T10:54:31.594677Z",
+     "iopub.status.busy": "2025-01-22T10:54:31.594135Z",
+     "iopub.status.idle": "2025-01-22T10:54:33.557878Z",
+     "shell.execute_reply": "2025-01-22T10:54:33.557338Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d69cd9",
+   "id": "5bd9c691",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0fb701f",
+   "id": "96d81d2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:54.349881Z",
-     "iopub.status.busy": "2025-01-22T10:38:54.349484Z",
-     "iopub.status.idle": "2025-01-22T10:38:54.352951Z",
-     "shell.execute_reply": "2025-01-22T10:38:54.352374Z"
+     "iopub.execute_input": "2025-01-22T10:54:33.559688Z",
+     "iopub.status.busy": "2025-01-22T10:54:33.559501Z",
+     "iopub.status.idle": "2025-01-22T10:54:33.563016Z",
+     "shell.execute_reply": "2025-01-22T10:54:33.562453Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ee729a",
+   "id": "3e96ed46",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e905fb",
+   "id": "b918eafb",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f26c0ea9",
+   "id": "9d05d21e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b29023",
+   "id": "c1fd16ab",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a269556d",
+   "id": "fc5759d8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:54.354970Z",
-     "iopub.status.busy": "2025-01-22T10:38:54.354614Z",
-     "iopub.status.idle": "2025-01-22T10:38:54.400236Z",
-     "shell.execute_reply": "2025-01-22T10:38:54.399655Z"
+     "iopub.execute_input": "2025-01-22T10:54:33.564977Z",
+     "iopub.status.busy": "2025-01-22T10:54:33.564626Z",
+     "iopub.status.idle": "2025-01-22T10:54:33.609043Z",
+     "shell.execute_reply": "2025-01-22T10:54:33.608474Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa91ddfa",
+   "id": "12705aaf",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a7b1c55",
+   "id": "f9cc5a64",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:54.402216Z",
-     "iopub.status.busy": "2025-01-22T10:38:54.401842Z",
-     "iopub.status.idle": "2025-01-22T10:38:54.470335Z",
-     "shell.execute_reply": "2025-01-22T10:38:54.469759Z"
+     "iopub.execute_input": "2025-01-22T10:54:33.610796Z",
+     "iopub.status.busy": "2025-01-22T10:54:33.610604Z",
+     "iopub.status.idle": "2025-01-22T10:54:33.677155Z",
+     "shell.execute_reply": "2025-01-22T10:54:33.676637Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67598470",
+   "id": "04c4de57",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945ec3f7",
+   "id": "308b61a9",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1455cf69",
+   "id": "d3c247a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:54.472211Z",
-     "iopub.status.busy": "2025-01-22T10:38:54.472024Z",
-     "iopub.status.idle": "2025-01-22T10:38:54.501612Z",
-     "shell.execute_reply": "2025-01-22T10:38:54.501040Z"
+     "iopub.execute_input": "2025-01-22T10:54:33.679090Z",
+     "iopub.status.busy": "2025-01-22T10:54:33.678724Z",
+     "iopub.status.idle": "2025-01-22T10:54:33.707623Z",
+     "shell.execute_reply": "2025-01-22T10:54:33.707113Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61ca823c",
+   "id": "417e2a0a",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d99dfc8",
+   "id": "ed6dfeb9",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b691da0",
+   "id": "0248ebe7",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15b9ad0e",
+   "id": "28945db0",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f8dcfa",
+   "id": "457fdef8",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8b7ec553",
+   "id": "7ef53592",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:54.503466Z",
-     "iopub.status.busy": "2025-01-22T10:38:54.503281Z",
-     "iopub.status.idle": "2025-01-22T10:38:54.507310Z",
-     "shell.execute_reply": "2025-01-22T10:38:54.506776Z"
+     "iopub.execute_input": "2025-01-22T10:54:33.709648Z",
+     "iopub.status.busy": "2025-01-22T10:54:33.709261Z",
+     "iopub.status.idle": "2025-01-22T10:54:33.713249Z",
+     "shell.execute_reply": "2025-01-22T10:54:33.712705Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a647f50",
+   "id": "87544c27",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4fe6398a",
+   "id": "d6917b90",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:54.509180Z",
-     "iopub.status.busy": "2025-01-22T10:38:54.508858Z",
-     "iopub.status.idle": "2025-01-22T10:38:54.511745Z",
-     "shell.execute_reply": "2025-01-22T10:38:54.511256Z"
+     "iopub.execute_input": "2025-01-22T10:54:33.715160Z",
+     "iopub.status.busy": "2025-01-22T10:54:33.714810Z",
+     "iopub.status.idle": "2025-01-22T10:54:33.717842Z",
+     "shell.execute_reply": "2025-01-22T10:54:33.717197Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c3a75e",
+   "id": "06033d4e",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2a4503f2",
+   "id": "da5bbe2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:54.513466Z",
-     "iopub.status.busy": "2025-01-22T10:38:54.513292Z",
-     "iopub.status.idle": "2025-01-22T10:38:57.089147Z",
-     "shell.execute_reply": "2025-01-22T10:38:57.088522Z"
+     "iopub.execute_input": "2025-01-22T10:54:33.719502Z",
+     "iopub.status.busy": "2025-01-22T10:54:33.719301Z",
+     "iopub.status.idle": "2025-01-22T10:54:36.305092Z",
+     "shell.execute_reply": "2025-01-22T10:54:36.304512Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881bef5b",
+   "id": "36dc97e0",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450cc801",
+   "id": "c17d7fc4",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db9a65b",
+   "id": "52b9d99e",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7460c606",
+   "id": "2f28e21d",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3526ae94",
+   "id": "033bd34a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:57.091280Z",
-     "iopub.status.busy": "2025-01-22T10:38:57.090930Z",
-     "iopub.status.idle": "2025-01-22T10:38:57.094516Z",
-     "shell.execute_reply": "2025-01-22T10:38:57.093878Z"
+     "iopub.execute_input": "2025-01-22T10:54:36.307007Z",
+     "iopub.status.busy": "2025-01-22T10:54:36.306810Z",
+     "iopub.status.idle": "2025-01-22T10:54:36.310660Z",
+     "shell.execute_reply": "2025-01-22T10:54:36.310004Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f5df1bb7380>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f93a4551a80>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "765100fb",
+   "id": "2d2cb976",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b9ddf68",
+   "id": "4281d9a8",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf57154",
+   "id": "d94ae906",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dccc28f1",
+   "id": "d2d2108e",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d0d47554",
+   "id": "0e86384c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:57.096256Z",
-     "iopub.status.busy": "2025-01-22T10:38:57.096064Z",
-     "iopub.status.idle": "2025-01-22T10:38:57.099531Z",
-     "shell.execute_reply": "2025-01-22T10:38:57.098970Z"
+     "iopub.execute_input": "2025-01-22T10:54:36.312522Z",
+     "iopub.status.busy": "2025-01-22T10:54:36.312316Z",
+     "iopub.status.idle": "2025-01-22T10:54:36.315460Z",
+     "shell.execute_reply": "2025-01-22T10:54:36.314886Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2bcb4919",
+   "id": "77345c59",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T10:38:57.101406Z",
-     "iopub.status.busy": "2025-01-22T10:38:57.101065Z",
-     "iopub.status.idle": "2025-01-22T10:38:58.172141Z",
-     "shell.execute_reply": "2025-01-22T10:38:58.171576Z"
+     "iopub.execute_input": "2025-01-22T10:54:36.317086Z",
+     "iopub.status.busy": "2025-01-22T10:54:36.316911Z",
+     "iopub.status.idle": "2025-01-22T10:54:37.367610Z",
+     "shell.execute_reply": "2025-01-22T10:54:37.367016Z"
     }
    },
    "outputs": [
